Add submodules for roles we depend on

--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -1,5 +1,9 @@
 # Tasks to set up Django (and Gulp for generating static files)
 
+- import_role:
+    name: geerlingguy.postgresql
+    become: yes
+
 # Install Django & dependencies
 
 - name: Install Django
