--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -1,9 +1,5 @@
 # Tasks to set up Django (and Gulp for generating static files)
 
-- import_role:
-    name: geerlingguy.postgresql
-    become: yes
-
 # Install Django & dependencies
 
 - name: Install Django
@@ -56,7 +52,7 @@
         app_path: "{{ django_app_path }}"
         virtualenv: "{{ django_virtualenv }}"
       # ignore_errors: True  # So doesn't complain if user already exists
-      when: {{ django_superuser_email is defined and django_superuser_email != "" }}
+      when: "{{ django_superuser_email is defined and django_superuser_email != '' }}"
 
 # Build static files with gulp
 
