--- a/roles/django/defaults/main.yml
+++ b/roles/django/defaults/main.yml
@@ -5,6 +5,7 @@
 django_checkout: "{{ django_dir }}/WebLab"
 django_app_path: "{{ django_checkout }}/weblab"
 django_static_path: "{{ django_app_path }}/static"
+django_staticfiles_path: "{{ django_app_path }}/staticfiles"
 django_media_path: "{{ django_app_path }}/media"
 django_virtualenv: "{{ django_dir }}/venv"
 
