--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -61,6 +61,7 @@
       django_manage:
         command: migrate
         app_path: "{{ django_app_path }}"
+        settings: config.settings.deployed
         virtualenv: '{{ django_virtualenv }}'
 
     - name: Django | Create initial superuser
@@ -71,6 +72,7 @@
                  --institution={{ django_superuser_institution|quote }}
         # The superuser will have to set their pass with 'forgot my password' functionality
         app_path: "{{ django_app_path }}"
+        settings: config.settings.deployed
         virtualenv: "{{ django_virtualenv }}"
       # ignore_errors: True  # So doesn't complain if user already exists
       when: django_superuser_email is defined and django_superuser_email != ''
