--- a/roles/django/vars/main.yml
+++ b/roles/django/vars/main.yml
@@ -1,5 +1,14 @@
 # Variables for this role
 
+# Where Django files are located
+
+django_checkout: "{{ django_dir }}/WebLab"
+django_app_path: "{{ django_checkout }}/weblab"
+django_static_path: "{{ django_app_path }}/static"
+django_staticfiles_path: "{{ django_app_path }}/staticfiles"
+django_media_path: "{{ django_app_path }}/media"
+django_virtualenv: "{{ django_dir }}/venv"
+
 # TODO: use Vault to secure real values of these!
 
 django_secret_key: '3586b9de8de54401e9e4a6d4905cf74ca06c0c90151c400d82fb49edbdfd58ef'
