Get access to Django parameters for uwsgi config

--- a/roles/uwsgi/tasks/main.yml
+++ b/roles/uwsgi/tasks/main.yml
@@ -1,5 +1,8 @@
 # Install & configure uWSGI
 
+- name: uWSGI | Include Django config
+  include_vars: roles/django/vars/main.yml
+
 - name: uWSGI | Install uWSGI
   apt:
     name: uwsgi
