--- a/roles/uwsgi/templates/django-uwsgi.ini
+++ b/roles/uwsgi/templates/django-uwsgi.ini
@@ -5,11 +5,12 @@ base = /home/%(uid)
 
 chdir = {{ django_app_path }}
 home = {{ django_virtualenv }}
-module = %(project).wsgi:application
+module = config.wsgi:application
 
 master = true
 # maximum number of worker processes
 processes = {{ uwsgi_processes }}
+plugins = python
 
 socket = {{ uwsgi_socket }}
 chown-socket = %(uid):{{ nginx_group }}
