Try better logging through syslog

--- a/roles/uwsgi/handlers/main.yml
+++ b/roles/uwsgi/handlers/main.yml
@@ -17,3 +17,9 @@
   service:
     name: uwsgi
     state: reloaded
+
+- name: restart rsyslog
+  become: true
+  service:
+    name: rsyslog
+    state: restarted
