--- a/roles/uwsgi/templates/django-uwsgi.ini
+++ b/roles/uwsgi/templates/django-uwsgi.ini
@@ -10,9 +10,13 @@ module = config.wsgi:application
 master = true
 # maximum number of worker processes
 processes = {{ uwsgi_processes }}
-plugins = python
+plugin = python
 
 socket = {{ uwsgi_socket }}
 chown-socket = %(uid):{{ nginx_group }}
 chmod-socket = 660
 vacuum = true
+
+# Log via syslog
+plugin = syslog
+logger = syslog:{{ uwsgi_app }}
