--- a/site.yml
+++ b/site.yml
@@ -2,5 +2,5 @@
 
 - import_playbook: webservers.yml
 - import_playbook: broker.yml
-# - import_playbook: task_queue.yml
+- import_playbook: task_queue.yml
 # - import_playbook: workers.yml
