Working on systemd config for celery

--- a/roles/celery/handlers/main.yml
+++ b/roles/celery/handlers/main.yml
@@ -3,5 +3,9 @@
 - name: restart celery
   become: true
   service:
-    name: celery
+    name: '{{ celery_service_name }}'
     state: restarted
+
+- name: reload systemd
+  become: true
+  systemd: daemon_reload=yes
