--- a/roles/celery/defaults/main.yml
+++ b/roles/celery/defaults/main.yml
@@ -24,3 +24,6 @@ chaste_root: "{{ celery_home }}/eclipse/workspace/Chaste"
 chaste_fc_exe: "{{ chaste_root }}/projects/FunctionalCuration/apps/src/FunctionalCuration"
 chaste_syntax_exe: "{{ chaste_root }}/projects/FunctionalCuration/apps/CheckSyntax.py"
 chaste_ld_library_path: "{{ chaste_root }}/lib"
+
+# Celery service name for systemd - default is probably fine
+celery_service_name: celery
