Explicitly create the celery group

--- a/roles/celery/tasks/main.yml
+++ b/roles/celery/tasks/main.yml
@@ -1,13 +1,19 @@
 # Common tasks to set up Celery for server & workers
 
 - name: Set up user for Celery to run as
-  user:
-    name: '{{ celery_user }}'
-    group: '{{ celery_group }}'
-    home: '{{ celery_home }}'
-    comment: Celery user
-    state: present
   become: yes
+  block:
+    - name: Create group
+      group:
+        name: '{{ celery_group }}'
+        state: present
+    - name: Create user
+      user:
+        name: '{{ celery_user }}'
+        group: '{{ celery_group }}'
+        home: '{{ celery_home }}'
+        comment: Celery user
+        state: present
 
 - name: Ensure the folder structure for Celery code exists
   file:
