Start on configuring the functional curation backend

--- a/group_vars/task_queue.yml
+++ b/group_vars/task_queue.yml
@@ -1,1 +1,8 @@
 # Variables applicable to the Celery web service
+
+# User Celery will run as
+celery_user: celery
+
+# User the FC backend will be installed under
+# This needs to match the Celery user above!
+fc_user: celery
