--- a/roles/fc-backend/defaults/main.yml
+++ b/roles/fc-backend/defaults/main.yml
@@ -4,9 +4,13 @@
 fc_user: celery
 fc_home: /home/{{ fc_user }}
 
+# Where to install Python packages for the backend
+fc_virtualenv: /opt/celery/venv
+
 # Chaste backend configuration
 chaste_repo: https://chaste.cs.ox.ac.uk/git/chaste.git
 fc_repo: https://chaste.cs.ox.ac.uk/svn/chaste/projects/FunctionalCuration
 chaste_root: "{{ fc_home }}/eclipse/workspace/Chaste"
 fc_project_name: FunctionalCuration
 fc_root: "{{ chaste_root }}/projects/{{ fc_project_name }}"
+chaste_fc_exe: "{{ fc_root }}/apps/src/FunctionalCuration"
