--- a/roles/nginx/vars/main.yml
+++ b/roles/nginx/vars/main.yml
@@ -37,7 +37,7 @@ nginx_vhosts:
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect   off;
-        proxy_buffering  off;  # TODO: Check what this does!
+        proxy_buffering  off;  # Don't buffer responses from Django
 
         uwsgi_pass  unix://{{ uwsgi_socket }};
         include     /etc/nginx/uwsgi_params;
