Get web service running
Still need to test that calling it works as expected...

--- a/group_vars/task_queue.yml
+++ b/group_vars/task_queue.yml
@@ -6,3 +6,6 @@ celery_user: celery
 # User the FC backend will be installed under
 # This needs to match the Celery user above!
 fc_user: celery
+
+# Copied from webserver (TODO: share!)
+nginx_group: www-data
