--- a/roles/fc-web-service/tasks/main.yml
+++ b/roles/fc-web-service/tasks/main.yml
@@ -1,6 +1,14 @@
 # Our specific tasks for configuring nginx for the backend web service
 # Most is done by the imported geerlingguy.nginx role
 
+- name: fc-web-service | Install virtualenv wrapper
+  template:
+    src: fc_runner.py.j2
+    dest: '{{ fc_webservice_cgi_dir }}/fc_runner.py'
+    owner: '{{ fc_webservice_user }}'
+    group: '{{ fc_webservice_group }}'
+    mode: 0755
+
 - name: fc-web-service | Install fcgiwrap
   apt:
     name: fcgiwrap
