--- a/roles/celery/tasks/main.yml
+++ b/roles/celery/tasks/main.yml
@@ -41,6 +41,7 @@
         force: yes
       notify:
         - restart celery
+        - restart fcgiwrap
 
     - name: Celery | Upgrade pip in virtualenv
       pip:
@@ -60,6 +61,7 @@
       become_flags: "-H"
       notify:
         - restart celery
+        - restart fcgiwrap
 
 - name: Celery | FCWS configuration
   become: yes  # Because the celery_user may not be in the nginx_group
@@ -73,6 +75,7 @@
     - config.json
   notify:
     - restart celery
+    - restart fcgiwrap
 
 - name: Install Celery service
   become: yes
