Django doesn't create this one for us
Git handles the repositories path creation.
Django makes the media root itself.

--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -16,6 +16,7 @@
   with_items:
     - '{{ django_dir }}'
     - '{{ django_data_path }}'
+    - '{{ django_experiments_path }}'
   become: yes
 
 # Install Django & dependencies
