--- a/roles/fc-web-service/tasks/main.yml
+++ b/roles/fc-web-service/tasks/main.yml
@@ -20,10 +20,19 @@
     name: geerlingguy.nginx
 
 - name: fc-web-service | Open http port
+  with_items: '{{ groups['webserver'] }}'
   ufw:
     proto: tcp
     to_port: 80
     direction: in
-    src: '{{ frontend_ip }}'
+    src: '{{ hostvars[item].ansible_default_ipv4.address }}'
+    rule: allow
+    state: enabled
+
+- name: fc-web-service | Open localhost http port
+  ufw:
+    proto: tcp80
+    direction: in
+    src: 127.0.0.1
     rule: allow
     state: enabled
