--- a/roles/fc-web-service/defaults/main.yml
+++ b/roles/fc-web-service/defaults/main.yml
@@ -1,8 +1,4 @@
 
-# The Django front-end's IP address, which is therefore allowed to
-# connect to the experiment runner service
-frontend_ip: 127.0.0.1
-
 # By default we assume we're only listening on localhost
 fc_webservice_fqdn: localhost
 
@@ -13,5 +9,5 @@ fc_webservice_cgi_dir: /opt/celery/repo
 fc_webservice_virtualenv: /opt/celery/venv
 
 # User & group for the CGI wrapper script
-fc_webservice_user: celery
-fc_webservice_group: www-data
+fc_webservice_user: '{{ celery_user }}'
+fc_webservice_group: '{{ nginx_group }}'
