Use a single play for each group
This avoids handlers running half-way through deployment, and means
handlers from other roles can be notified properly.

--- a/task_queue.yml
+++ b/task_queue.yml
@@ -5,8 +5,4 @@
     - git
     - python
     - celery
-
-- hosts: task_queue
-  become: yes
-  roles:
-    - fc-web-service
+    - { role: fc-web-service, become: yes }
