--- a/webservers.yml
+++ b/webservers.yml
@@ -5,9 +5,5 @@
     - git
     - python
     - django
-
-- hosts: webserver
-  become: yes
-  roles:
-    - uwsgi
-    - nginx
+    - { role: uwsgi, become: yes }
+    - { role: nginx, become: yes }
