Copy ubuntu.py as local.py to avoid Chaste rebuilds

--- a/roles/fc-backend/tasks/main.yml
+++ b/roles/fc-backend/tasks/main.yml
@@ -50,10 +50,11 @@
       register: code_fc
       notify: restart celery
     
-    - name: Remove Chaste machines folder
-      file:
-        path: '{{ chaste_root }}/python/hostconfig/machines'
-        state: absent
+    - name: Default to ubuntu hostconfig for Chaste
+      copy:
+        dest: '{{ chaste_root }}/python/hostconfig/local.py'
+        src: '{{ chaste_root }}/python/hostconfig/ubuntu.py'
+        remote_src: yes
     
     - name: FC | Install Python packages
       pip:
