--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Install Python
   apt:
     name: "{{ item }}"
-    state: installed
+    state: present
   with_items:
     - python3
     - python3-pip
