Split out a role for preparing virtualenvs
This includes creating parent folder with correct owner if needed.

--- a/roles/celery/meta/main.yml
+++ b/roles/celery/meta/main.yml
@@ -11,3 +11,8 @@ dependencies:
   - role: fc-backend
     fc_user: '{{ celery_user }}'
     fc_virtualenv: '{{ celery_virtualenv }}'
+  # And we need a virtualenv
+  - role: prep_venv
+    user: '{{ celery_user }}'
+    virtualenv: '{{ celery_virtualenv }}'
+    virtualenv_python: python2.7
