--- a/roles/django/meta/main.yml
+++ b/roles/django/meta/main.yml
@@ -4,3 +4,9 @@ dependencies:
     user_name: "{{ django_user }}"
     user_comment: Web Lab Django user account
   - { role: geerlingguy.postgresql, become: yes }
+
+  # And we need a virtualenv
+  - role: prep_venv
+    user: '{{ django_user }}'
+    virtualenv: '{{ django_virtualenv }}'
+    virtualenv_command: pyvenv
