--- a/roles/nginx/vars/main.yml
+++ b/roles/nginx/vars/main.yml
@@ -10,13 +10,16 @@ nginx_remove_default_vhost: yes
 
 nginx_vhosts:
   # Our main host configuration
-  - listen: "443 ssl http2"
+  - listen: "{{ (inventory == 'dev') | ternary('80', '443 ssl http2') }}"
     server_name: "{{ webserver_fqdn }}"
     filename: "{{ webserver_fqdn }}.conf"
     template: "{{ nginx_vhost_template }}"
+    state: "present"
     extra_parameters: |
+      {% if inventory != 'dev' %}
       ssl_certificate     {{ ssl_certificate }};
       ssl_certificate_key {{ ssl_certificate_key }};
+      {% endif %}
       charset     utf-8;
 
       location /media  {
@@ -48,3 +51,4 @@ nginx_vhosts:
     server_name: "{{ webserver_fqdn }}"
     return: "301 https://$host$request_uri"
     filename: "{{ webserver_fqdn }}.80.conf"
+    state: "{{ (inventory == 'dev') | ternary('absent', 'present') }}"
